# desktop_notes

./: Cargo.toml  LICENSE  README.md
src/: app_state.rs  main.rs  utils.rs
