[package]
name = "desktop_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = [] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
color-eyre = "0.6.2"

[profile.dev.package.backtrace]
opt-level = 3
